export class Measure {
    base = 0
    beats = 0
    constructor(base, beats) {
        this.base = base
        this.beats = beats
    }
}
